[package]
name = "pic"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.4", features = ["yaml"] }
dialoguer = "0.8.0"
codespan-reporting = "0.11.1"
lalrpop = "0.19.6"
lalrpop-util = "0.19.6"
unindent = "0.1.7"
ic-agent = { version="0.8.0", features = ["pem"] }
ic-utils = "0.6.0"
candid = "0.7.7"
serde = "1.0.130"
serde_json = "1.0.68"
log = "0.4.14"
pretty_env_logger = "0.4.0"
human-panic = "1.0.3"
dirs = "4.0.0"
thiserror = "1.0"
anyhow = { version = "1.0", default-features = false }
shellexpand = "2.1.0"
pathdiff = "0.2.0"
pretty = "0.10.0"
mkdirp = "1.0.0"
ring = "0.16.20"
pem = "1.0.0"
openssl = "0.10.36"
rand = "0.8.4"
crossbeam = "0.8.1"
actix = "0.12.0"
futures = "0.3.17"
ctrlc = "3.2.1"
garcon = "0.2.3"
hex = "0.4.3"